--- a/compose.yml
+++ b/compose.yml
@@ -2,7 +2,7 @@ haproxy:
   image:daocloud.io/haproxy:1.4
   restart: always
   ports:
-  - 3307:3307
+  - 3306:3306
   - 8080:8080
   link:
   - node1:node1
@@ -16,6 +16,8 @@ node1:
   image:daocloud.io/airywenter/galera-mysql
   restart: always
   command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://
+  volumes:
+  - /root/data/mysql:/var/lib/mysql
 
 node2:
   container_name:node2
@@ -24,12 +26,16 @@ node2:
   link:
   - node1:node1
   command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+  volumes_from:
+  - node1
 
-node2:
+node3:
   container_name:node3
   image: daocloud.io/airywenter/galera-mysql
   restart: always
   link:
   - node1:node1
   command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+  volumes_from:
+  - node1
 
