--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -17,7 +17,7 @@ defaults
     timeout     server  50000ms
 
 
-listen mariadb-galera-reads
+listen galera-mysql
     bind 0.0.0.0:3306
     mode tcp
     balance leastconn
