--- a/compose.yml
+++ b/compose.yml
@@ -1,41 +1,38 @@
-haproxy:
-  image: daocloud.io/haproxy:1.4
-  restart: always
-  ports:
-  - 3306:3306
-  - 8080:8080
-  link:
-  - node1:node1
-  - node2:node2
-  - node3:node3
-  volumes:
-  - /root/haproxy-cfg/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
-
-node1:
-  container_name: node1
-  image:daocloud.io/airywenter/galera-mysql
-  restart: always
-  command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://
-  volumes:
-  - /root/data/mysql:/var/lib/mysql
-
-node2:
-  container_name: node2
-  image: daocloud.io/airywenter/galera-mysql
-  restart: always
-  link:
-  - node1:node1
-  command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
-  volumes_from:
-  - node1
-
-node3:
-  container_name: node3
-  image: daocloud.io/airywenter/galera-mysql
-  restart: always
-  link:
-  - node1:node1
-  command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
-  volumes_from:
-  - node1
-
+version: "2"
+services:
+    haproxy:
+      image: daocloud.io/haproxy:1.4
+      restart: always
+      ports:
+      - 3306:3306
+      - 8080:8080
+      volumes:
+      - /root/haproxy-cfg/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    
+    node1:
+      container_name: node1
+      image:daocloud.io/airywenter/galera-mysql
+      restart: always
+      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://
+      volumes:
+      - /root/data/mysql:/var/lib/mysql
+    
+    node2:
+      container_name: node2
+      image: daocloud.io/airywenter/galera-mysql
+      restart: always
+      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+      volumes_from:
+      - node1
+    
+    node3:
+      container_name: node3
+      image: daocloud.io/airywenter/galera-mysql
+      restart: always
+      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+      volumes_from:
+      - node1
+    
+networks:
+  galera-mysql:
+    driver: overlay
