--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -8,17 +8,15 @@ global
 defaults
     log         global
     option      tcplog
-    option      dontlognull
     retries     3
     maxconn     4096
-    option      redispatch
     timeout     connect 50000ms
     timeout     client  50000ms
     timeout     server  50000ms
 
 
-listen galera-mysql
-    bind 0.0.0.0:3306
+listen galera-mysql 
+    bind *:3306
     mode tcp
     balance leastconn
     option mysql-check user haproxy
@@ -26,11 +24,3 @@ listen galera-mysql
     server node2 node2:3306 check
     server node3 node3:3306 check
 
-# HAProxy web ui
-listen stats 0.0.0.0:9000
-    mode http
-    stats enable
-    stats uri /
-    stats realm HAProxy\ Statistics
-    stats auth haproxy:12345
-    stats admin if TRUE
