--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -15,12 +15,12 @@ defaults
     timeout     server  50000ms
 
 
-listen galera-mysql 
-    bind *:3306
+listen galera-mysql 0.0.0.0:3306
     mode tcp
-    balance leastconn
-    option mysql-check user haproxy
-    server node1 node1:3306 check
-    server node2 node2:3306 check
-    server node3 node3:3306 check
+    balance source
+    option tcpka
+#    option mysql-check user haproxy
+    server node1 node1:3306 check weight 1
+    server node2 node2:3306 check weight 1
+    server node3 node3:3306 check weight 1
 
