--- a/compose.yml
+++ b/compose.yml
@@ -5,27 +5,28 @@ services:
       image: daocloud.io/haproxy:1.4
       restart: always
       ports:
-      - "3307:3306"
+      - "3306:3306"
       volumes:
-      - /root/haproxy-cfg:/usr/local/etc/haproxy
+      - /root/haproxy-config:/usr/local/etc/haproxy
     
     node1:
       container_name: node1
-      image: daocloud.io/airywenter/galera-mysql
+      image: erkules/galera:basic
       restart: always
-      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://
+      command: --wsrep-cluster-name=daocloud --wsrep-cluster-address=gcomm:// --wsrep-sst-receive-address=node1:4444 --wsrep-provider-options="ist.recv_addr=node1:4568" --wsrep-node-address=node1:4567
     
     node2:
       container_name: node2
-      image: daocloud.io/airywenter/galera-mysql
+      image: erkules/galera:basic
       restart: always
-      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+      command: --wsrep-cluster-name=daocloud --wsrep-cluster-address=gcomm://node1 --wsrep-sst-receive-address=node2:4444 --wsrep-provider-options="ist.recv_addr=node2:4568" --wsrep-node-address=node2:4567
     
     node3:
       container_name: node3
-      image: daocloud.io/airywenter/galera-mysql
+      image: erkules/galera:basic
       restart: always
-      command: --wsrep-cluster-name=local-test --wsrep-cluster-address=gcomm://node1
+      command: --wsrep-cluster-name=daocloud --wsrep-cluster-address=gcomm://node1  --wsrep-sst-receive-address=node3:4444 --wsrep-provider-options="ist.recv_addr=node3:4568" --wsrep-node-address=node3:4567
+   
 #    
 networks:
   galera-mysql:
